feat: add styles

--- a/index.html
+++ b/index.html
@@ -16,26 +16,29 @@
     <main>
       <section>
         <h2>Personal information</h2>
-        <div class="photo">
-          <figure><img src="./assets/images/tarasov.jpg" alt="Dzmitry Tarasau" title="Dzmitry Tarasau" width="300" height="300"></figure>
-        </div>
-        <div><p>Name: Dzmitry Tarasau</p></div>
-        <div><p>Address: Minsk, Belarus</p></div>
-        <div><p>Phone number: +375292704860</p></div>
-        <div><p>Email: geek10010@gmail.com</p></div>
-        <div><p>Skype: dmitarasov</p></div>
-        <div><p>Nationality: Belarusian</p></div>
-        <div><p>Marital status: Married</p></div>
+
+        <figure class="photo">
+          <img src="./assets/images/tarasov.jpg" alt="Dzmitry Tarasau" title="Dzmitry Tarasau" width="300" height="300">
+        </figure>
+        <p>Name: Dzmitry Tarasau</p>
+        <p>Address: Minsk, Belarus</p>
+        <p>Phone number: +375292704860</p>
+        <p>Email: geek10010@gmail.com</p>
+        <p>Skype: dmitarasov</p>
+        <p>Nationality: Belarusian</p>
+        <p>Marital status: Married</p>
       </section>
 
       <section>
         <h2>Summary</h2>
-        <p>I'm interested in a junior front-end developer position to become a highly qualified web developer.</p>
+
+        <p>I'm interested in a front-end developer position to become a highly qualified web developer.</p>
         <p>Why? — The possibilities of modern web technologies inspire me to learn new things and practice every day. I enjoy learning by books, articles, videos, studying online courses, making own projects, participating in hackathons, meetups and conferences.</p>
       </section>
 
       <section>
         <h2>Skills</h2>
+
         <p>HTML5, CSS3, JavaScript ES2015+, git, Linux cli, SEO, BEM, Bootstrap, Drupal CMF (6, 7, 8 versions), SQL, MySQL, Webpack, Python (basic), PHP (basic), Algorithms and data structures, Negotiating, Project management</p>
       </section>
 
@@ -133,7 +136,7 @@
     </main>
 
     <footer>
-      &copy; 2019 Dzmitry Tarasau
+      <p>&copy; 2019 Dzmitry Tarasau</p>
     </footer>
   </div>
 </body>
