refactor: improve personal info section

--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
     <main>
       <section>
         <h2>Personal information</h2>
-
-        <figure class="photo">
-          <img src="./assets/images/tarasov.jpg" alt="Dzmitry Tarasau" title="Dzmitry Tarasau" width="300" height="300">
-        </figure>
-        <p>Name: Dzmitry Tarasau</p>
-        <p>Address: Minsk, Belarus</p>
-        <p>Phone number: +375292704860</p>
-        <p>Email: geek10010@gmail.com</p>
-        <p>Skype: dmitarasov</p>
-        <p>Nationality: Belarusian</p>
-        <p>Marital status: Married</p>
+        <div class="personal">
+          <table class="personal-info">
+            <tbody>
+              <tr><td>Name:</td><td><strong>Dzmitry Tarasau</strong></td></tr>
+              <tr><td>Address:</td><td><strong>Minsk, Belarus</strong></td></tr>
+              <tr><td>Phone number:</td><td><strong><a href="tel:+375292704860">+375292704860</a></strong></td></tr>
+              <tr><td>Email:</td><td><strong><a href="mailto:geek10010@gmail.com">geek10010@gmail.com</a></strong></td></tr>
+              <tr><td>Skype:</td><td><strong>dmitarasov</strong></td></tr>
+              <tr><td>Nationality:</td><td><strong>Belarusian</strong></td></tr>
+              <tr><td>Marital status:</td><td><strong>Married</strong></td></tr>
+            </tbody>
+          </table>
+          <figure class="photo">
+              <img src="./assets/images/tarasov.jpg" alt="Dzmitry Tarasau" title="Dzmitry Tarasau" width="300" height="300">
+          </figure>
+        </div>
       </section>
 
       <section>
