feat: add styles for headers and lists

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     <main>
       <section>
         <h2>Personal information</h2>
+
         <div class="personal">
           <table class="personal-info">
             <tbody>
               <tr><td>Name:</td><td><strong>Dzmitry Tarasau</strong></td></tr>
               <tr><td>Address:</td><td><strong>Minsk, Belarus</strong></td></tr>
-              <tr><td>Phone number:</td><td><strong><a href="tel:+375292704860">+375292704860</a></strong></td></tr>
-              <tr><td>Email:</td><td><strong><a href="mailto:geek10010@gmail.com">geek10010@gmail.com</a></strong></td></tr>
-              <tr><td>Skype:</td><td><strong>dmitarasov</strong></td></tr>
-              <tr><td>Nationality:</td><td><strong>Belarusian</strong></td></tr>
+              <tr><td>Phone number:</td><td><strong><a href="tel:+375292704860">+37529&shy;270&shy;4860</a></strong></td></tr>
+              <tr><td>Email:</td><td><strong><a href="mailto:geek10010@gmail.com">geek&shy;10010&shy;@gmail&shy;.com</a></strong></td></tr>
+              <tr><td>Skype:</td><td><strong>dmi&shy;tarasov</strong></td></tr>
+              <tr><td>Nationality:</td><td><strong>Bela&shy;rusian</strong></td></tr>
               <tr><td>Marital status:</td><td><strong>Married</strong></td></tr>
             </tbody>
           </table>
@@ -37,14 +38,14 @@
       <section>
         <h2>Summary</h2>
 
-        <p>I'm interested in a front-end developer position to become a highly qualified web developer.</p>
+        <p>I'm interested in a front-end developer position to create value for customers and become a highly qualified web developer.</p>
         <p>Why? — The possibilities of modern web technologies inspire me to learn new things and practice every day. I enjoy learning by books, articles, videos, studying online courses, making own projects, participating in hackathons, meetups and conferences.</p>
       </section>
 
       <section>
         <h2>Skills</h2>
 
-        <p>HTML5, CSS3, JavaScript ES2015+, git, Linux cli, SEO, BEM, Bootstrap, Drupal CMF (6, 7, 8 versions), SQL, MySQL, Webpack, Python (basic), PHP (basic), Algorithms and data structures, Negotiating, Project management</p>
+        <p>HTML5, CSS3, JavaScript ES2015+, git, Linux cli, SEO, Bootstrap, Drupal CMF (6, 7, 8 versions), SQL, MySQL, Webpack, Python (basic), PHP (basic), BEM, Algorithms and data structures, Negotiating, Project management</p>
       </section>
 
       <section>
@@ -77,9 +78,9 @@
         <h3>Some websites developed by me as freelancer:</h3>
 
         <ul>
-            <li><a href="https://www.donskie.com" target="_blank">https://www.donskie.com</a></li>
-            <li><a href="http://www.tekadum.by" target="_blank">http://www.tekadum.by</a></li>
-            <li><a href="https://www.razvitie.by" target="_blank">https://www.razvitie.by</a></li>
+          <li><a href="https://www.donskie.com" target="_blank">https://www.donskie.com</a></li>
+          <li><a href="http://www.tekadum.by" target="_blank">http://www.tekadum.by</a></li>
+          <li><a href="https://www.razvitie.by" target="_blank">https://www.razvitie.by</a></li>
         </ul>
 
         <h3>Website developed in team (me: structure and markup partially):</h3>
